--- a/.github/workflows/go_lint.yaml
+++ b/.github/workflows/go_lint.yaml
@@ -24,3 +24,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.60
+      - name: staticcheck
+        uses: dominikh/staticcheck-action@v1
+        with:
+          version: "latest"
